<resources>
    <string name="app_name">欣社区</string>
    <string name="app_name_me">欣社区</string>
    <string name="action_share">分享</string>
    <string name="main_main">首页</string>
    <string name="main_wuye">欣物业</string>
    <string name="main_zhoubian">欣周边</string>
    <string name="main_shangcheng">欣商城</string>
    <string name="index_broad">com.broad.index.jump</string>
    <string name="add_shop_cart">com.broad.cxwl.add2shopcart</string>
    <string name="update_mine">com.broad.cxwl.updatemine</string>
    <string name="searchHint">输入您要搜索的商品</string>
    <string name="search">搜索</string>
    <string name="history">历史记录</string>
    <string name="nohistory">暂无搜索历史</string>
    <string name="clearHistory">清除历史搜索</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载\u2026</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loading">正在加载</string>
    <string name="loading_failed">哎哟！网络加载失败啦,轻击屏幕重新加载.</string>
    <string name="loading_failed_1">哎哟！网络加载失败啦.</string>
    <string name="no_data">暂无数据\u2026</string>
    <string name="text_edit">编辑</string>
    <string name="price_danwei">￥</string>
    <string name="price_connt">总计：￥</string>
    <string name="cart_login_tips">您还没有登陆哦,登陆之后更精彩！</string>
    <string name="login_text">立即登陆</string>
    <string name="cart_isNull">购物车还没有任何商品</string>
    <string name="cart_goShopping">去逛逛</string>
    <string name="all_selete">全选</string>
    <string name="cannot_minus_cart">客官,不能再少了哦</string>
    <string name="cannot_plus">满了满了满了，客官</string>
    <string name="num">销量</string>
    <string name="price">价格</string>
    <string name="popularity">人气</string>
    <string name="praisegood">好评</string>
    <string name="praisecomment">中评</string>
    <string name="praisebad">差评</string>
    <string name="allOrder">全部</string>
    <string name="ytjOrder">待付款</string>
    <string name="dfhOrder">待发货</string>
    <string name="dshOrder">待收货</string>
    <string name="dpjOrder">待评价</string>
    <string name="dthOrder">退款</string>
    <string name="delete_succeed">删除成功</string>
    <string name="order_goodList">商品列表</string>
    <string name="orderTime">下单时间：</string>
    <string name="orderTotalNum">商品总数：</string>
    <string name="orderPeisong">配送人：</string>
    <string name="orderPeisongPraise">配送费：</string>
    <string name="youhuijia">电子券：</string>
    <string name="orderConPrice">总价格：￥</string>
    <string name="get_failed">暂无</string>
    <string name="order_num">订单号:</string>
    <string name="buyer_note">买家附言：</string>
    <string name="par_Methods">支付方式：</string>
    <string name="goods_left">货到付款</string>
    <string name="cancelinfo">取消原因：</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="register_name_digits">~!@#$%^*()_?/\+-=,._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="clickUpdateVision">点击更新</string>
    <string name="can_not_find_version_name">暂无法获取版本号</string>
    <string name="screenshot_success">截图成功</string>
    <string name="screenshot_error">截图失败</string>
    <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    <string name="umeng_socialize_network_break_alert" translatable="false">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment" translatable="false">评论</string>
    <string name="umeng_socialize_comment_detail" translatable="false">评论详情</string>
    <string name="umeng_socialize_back" translatable="false">返回</string>
    <string name="umeng_socialize_near_At" translatable="false">最近\@的好友</string>
    <string name="umeng_socialize_friends" translatable="false">关注的好友</string>
    <string name="umeng_socialize_send" translatable="false">发布</string>
    <string name="umeng_socialize_tip_blacklist" translatable="false">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed" translatable="false">登录失败&#8230;</string>
    <string name="umeng_socialize_msg_sec" translatable="false">秒前</string>
    <string name="umeng_socialize_msg_min" translatable="false">分钟前</string>
    <string name="umeng_socialize_msg_hor" translatable="false">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide" translatable="false">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform" translatable="false">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台，
												（二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。
												（三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧&#8230;</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中&#8230;</string>
    <string name="umeng_socialize_content_hint">说点啥&#8230;</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des"></string>
    <string name="umeng_socialize_share">分享</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="device_is_added">%s设备已添加</string>
    <string name="add_camera_fail_network_exception">添加失败，请检查您的网络</string>
    <string name="countdown">留言时长还剩%d秒</string>
    <string name="realplay_fail_device_not_exist">设备不在线</string>
    <string name="quality_hd">高清</string>
    <string name="quality_balanced">标清</string>
    <string name="quality_flunet">流畅</string>
    <string name="ptz">云台</string>
    <string name="talk">对讲</string>
    <string name="capture">截图</string>
    <string name="record">录像</string>
    <string name="close_camera_lens">镜头遮蔽</string>
    <string name="open_camera_lens">镜头开启</string>
    <string name="camera_lens_closed">镜头遮蔽中</string>
    <string name="camera_lens_closing">正在遮蔽镜头...</string>
    <string name="camera_lens_opening">正在取消遮蔽...</string>
    <string name="close_source_localization">听声辨位关闭</string>
    <string name="open_source_localization">听声辨位开启</string>
    <string name="loading_text_default">加载中，请稍候</string>
    <string name="realplay_no_encrypt_password_error">视频已加密，播放失败</string>
    <string name="readed">已读</string>
    <string name="source_detection_off">OFF</string>
    <string name="source_detection_on">ON</string>
    <string name="start_voice_talk">正在发起对讲</string>
    <string name="realplay_full_talk_start_tip">你可以开始说话了</string>
    <string name="realplay_set_fail_network">设置失败，请检查您的网络</string>
    <string name="setting_video_level">正在设置画面质量…</string>
    <string name="talking">对讲中…</string>
    <string name="remoteplayback_SDCard_disable_use">存储卡不可用</string>
    <string name="remoteplayback_record_fail_for_memory">录像中断,存储空间已满</string>
    <string name="already_saved_to_volume">已保存至相册</string>
    <string name="remoteplayback_capture_fail_for_memory">抓图失败,存储空间已满</string>
    <string name="realplay_play_fail_becauseof_network">视频播放失败，请检查您的网络</string>
    <string name="camera_lens_too_busy">镜头转动中，请稍候</string>
    <string name="ptz_is_preseting">镜头转动中，请稍候</string>
    <string name="ptz_control_timeout_sound_lacalization_failed">听声辨位已开启，操作失败</string>
    <string name="ptz_control_timeout_cruise_track_failed">轨迹巡航中，请稍候</string>
    <string name="ptz_preset_invalid_position_failed">当前位置已被删除，请返回刷新</string>
    <string name="ptz_preset_current_position_failed">当前就在这个位置哦</string>
    <string name="ptz_preset_sound_localization_failed">听声辨位中，请稍候</string>
    <string name="ptz_operation_failed">操作失败</string>
    <string name="ptz_operation_too_frequently">操作太频繁啦，先歇歇吧</string>
    <string name="ptz_preset_exceed_maxnum_failed">已经不能收藏更多了</string>
    <string name="ptz_privacying_failed">镜头已遮蔽，无法操作云台</string>
    <string name="ptz_mirroring_failed">语音对讲中，无法操作云台</string>
    <string name="realplay_play_talkback_fail_ison">同一时间只能与一台设备进行对讲哦，请停止其他对讲后再尝试</string>
    <string name="realplay_play_talkback_fail_privacy">隐私保护模式下无法对讲</string>
    <string name="realplay_set_vediomode_fail">视频质量切换失败</string>
    <string name="realplay_play_talkback_fail">对讲开启失败</string>
    <string name="remoteplayback_record_fail">录像失败</string>
    <string name="remoteplayback_over_link">设备连接数过大，停止其他连接后再试试吧</string>
    <string name="realplay_fail_connect_device">播放失败，连接设备异常</string>
    <string name="realplay_play_fail">视频播放失败</string>
    <string name="realplay_encrypt_password_error_title">请输入视频图片加密密码</string>
    <string name="realplay_password_error_message4">视频已加密，请联系分享者获取密码进行查看（密码区分大小写）</string>
    <string name="realplay_set_fail_status">视频播放失败，设备已开启隐私保护</string>
    <string name="realplay_play_talkback_network_exception">网络异常，对讲已关闭</string>
    <string name="realplay_play_talkback_request_timeout">请求超时，对讲已关闭</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>