<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="165dp"
    android:background="@mipmap/preview_selection_bg"
    android:orientation="vertical"
    android:gravity="center"
     >
    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"/>
    <Button
        android:id="@+id/quality_hd_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="13dp"
        android:text="@string/quality_hd"
        android:textColor="@color/quality_color_selector"
        android:textSize="@dimen/realplay_text_size"
        android:background="@color/transparent" />

    <Button
        android:id="@+id/quality_balanced_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="13dp"
        android:text="@string/quality_balanced"
        android:textColor="@color/quality_color_selector"
        android:textSize="@dimen/realplay_text_size"
        android:background="@color/transparent" />

    <Button
        android:id="@+id/quality_flunet_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="13dp"
        android:text="@string/quality_flunet"
        android:textColor="@color/quality_color_selector"
        android:textSize="@dimen/realplay_text_size"
        android:background="@color/transparent" />
</LinearLayout>