<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ezopen_realplay_operate_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none"
    android:background="#e0e0e0"
    android:scrollbars="none" >

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/realplay_operate_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="温馨提示：公共资源，提供1分钟观看时间\n剩余观看时间为:"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/tv_remaintime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="40px"
                android:textColor="#e35851"
                android:layout_gravity="center_horizontal"
                />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/realplay_ptz_btn_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <ImageButton
                    android:id="@+id/realplay_ptz_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/play_ptz_selector"
                    android:onClick="onClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/ptz"
                    android:layout_gravity="center"
                    android:textColor="@color/common_sub_text"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/realplay_talk_btn_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="vertical" >
                <ImageButton
                    android:id="@+id/realplay_talk_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/play_talk_selector"
                    android:onClick="onClick" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/talk"
                    android:layout_gravity="center"
                    android:textColor="@color/common_sub_text"
                    android:textSize="12dp" />
            </LinearLayout>
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal" >

            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/realplay_ssl_btn_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical" >
                <com.zhy.autolayout.AutoRelativeLayout
                    android:id="@+id/realplay_ssl_btn_rl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <Button
                        android:id="@+id/realplay_ssl_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/source_detection_off"
                        android:textColor="@color/source_detection_btn_color"
                        android:textSize="23dp"
                        android:background="@mipmap/sound_source"
                        android:onClick="onClick" />

                    <ProgressBar
                        android:id="@+id/realplay_ssl_progress"
                        android:indeterminateDrawable="@drawable/common_loading_indeterminate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone"/>
                </com.zhy.autolayout.AutoRelativeLayout>
                <TextView
                    android:id="@+id/realplay_ssl_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/close_source_localization"
                    android:layout_gravity="center"
                    android:textColor="@color/common_sub_text"
                    android:textSize="12dp" />
            </com.zhy.autolayout.AutoLinearLayout>
            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/realplay_privacy_btn_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical" >
                <ImageButton
                    android:id="@+id/realplay_privacy_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/play_privacy_selector"
                    android:onClick="onClick" />
                <TextView
                    android:id="@+id/realplay_privacy_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/close_camera_lens"
                    android:layout_gravity="center"
                    android:textColor="@color/common_sub_text"
                    android:textSize="12dp" />
            </com.zhy.autolayout.AutoLinearLayout>

            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/realplay_previously_btn_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <ImageButton
                    android:id="@+id/realplay_previously_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/play_previously_selector"
                    android:onClick="onClick" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/capture"
                    android:layout_gravity="center"
                    android:textColor="@color/common_sub_text"
                    android:textSize="12dp" />
            </com.zhy.autolayout.AutoLinearLayout>

            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/realplay_video_container_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="vertical" >
                <com.zhy.autolayout.AutoFrameLayout
                    android:id="@+id/realplay_video_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageButton
                        android:id="@+id/realplay_video_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/play_video_selector"
                        android:onClick="onClick" />

                    <ImageButton
                        android:id="@+id/realplay_video_start_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/play_video_sel"
                        android:onClick="onClick"
                        android:visibility="gone" />
                </com.zhy.autolayout.AutoFrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/record"
                    android:layout_gravity="center"
                    android:textColor="@color/common_sub_text"
                    android:textSize="12dp" />
            </com.zhy.autolayout.AutoLinearLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
</HorizontalScrollView>